# distrustc

./: Cargo.toml  LICENSE  README.md
crates/distrustc-client/: Cargo.toml
crates/distrustc-client/src/: lib.rs  main.rs
crates/distrustc-server/: Cargo.toml
crates/distrustc-server/src/: lib.rs  main.rs
src/: main.rs
