[package]
name = "distrustc-server"
version = "0.1.0"
edition = "2021"
authors = [ "Garen Tyler <garentyler@garen.dev>" ]
description = "A Rust-compatible distcc implementation"
documentation = "https://docs.rs/distrustc-server"
repository = "https://github.com/garentyler/distrustc"
keywords = [ "distrustc", "distcc", "rustc", "distributed", "compiler" ]
categories = [ "command-line-utilities", "compilers", "concurrency", "development-tools::build-utils", "development-tools::cargo-plugins" ]
license = "MIT"

[dependencies]
